# turbulent_dataset

./: .gitignore  README.md  config.toml  in_out.py  main.py  pyproject.toml  read.py  scintillation.py  visualization.py
